[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu/controls/Controls.gd" type="Script" id=1]
[ext_resource path="res://menu/controls/Keys/Back.png" type="Texture" id=2]

[node name="Controls" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Go back" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 171.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_top = 15
custom_constants/margin_left = 15
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Go back" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 15.0
margin_right = 171.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="Button" type="Button" parent="Go back/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 28.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 2 )
flat = true
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Main Menu" type="Label" parent="Go back/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 5.0
margin_right = 156.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Back to main menu"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="Go back2" type="MarginContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 92.0
margin_right = 172.0
margin_bottom = 132.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_top = 15
custom_constants/margin_left = 15
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Go back2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 15.0
margin_right = 171.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="Button2" type="Button" parent="Go back2/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 28.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 2 )
flat = true
align = 1
_sections_unfolded = [ "Pause" ]

[node name="Main Menu" type="Label" parent="Go back2/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 5.0
margin_right = 135.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Change Controls"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="Title" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 250.0
margin_right = 1284.0
margin_bottom = 264.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Controls Scheme"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="Controls" type="HBoxContainer" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -207.0
margin_top = -127.5
margin_right = 207.0
margin_bottom = 127.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="LeftMargin" type="MarginContainer" parent="Controls" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 327.0
margin_bottom = 322.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_top = 8
custom_constants/margin_left = 0
_sections_unfolded = [ "Margin", "custom_constants" ]

[node name="Description" type="VBoxContainer" parent="Controls/LeftMargin" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 8.0
margin_right = 327.0
margin_bottom = 322.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 22
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="Up" type="Button" parent="Controls/LeftMargin/Description" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 327.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( -65.8062, 304.541 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Move player up"
flat = false
align = 1

[node name="Down" type="Button" parent="Controls/LeftMargin/Description" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 327.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( -65.8062, 304.541 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Move player down"
flat = false
align = 1

[node name="Left" type="Button" parent="Controls/LeftMargin/Description" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 327.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( -65.8062, 304.541 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Move player left"
flat = false
align = 1

[node name="Right" type="Button" parent="Controls/LeftMargin/Description" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 126.0
margin_right = 327.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( -65.8062, 304.541 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Move player right"
flat = false
align = 1

[node name="Use Select" type="Button" parent="Controls/LeftMargin/Description" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 327.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( -65.8062, 304.541 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Use equipped item or select item from inventory"
flat = false
align = 1

[node name="Inventory" type="Button" parent="Controls/LeftMargin/Description" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 210.0
margin_right = 327.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( -65.8062, 304.541 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Open inventory"
flat = false
align = 1

[node name="Pickup" type="Button" parent="Controls/LeftMargin/Description" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 252.0
margin_right = 327.0
margin_bottom = 272.0
rect_pivot_offset = Vector2( -65.8062, 304.541 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Pick up item"
flat = false
align = 1

[node name="Pause" type="Button" parent="Controls/LeftMargin/Description" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 294.0
margin_right = 327.0
margin_bottom = 314.0
rect_pivot_offset = Vector2( -65.8062, 304.541 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Pause game"
flat = false
align = 1

[node name="Popup" type="Popup" parent="Controls/LeftMargin/Description" index="8"]

visible = false
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -163.5
margin_right = 163.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
_sections_unfolded = [ "Anchor", "Margin", "Material", "Pause", "Popup" ]

[node name="InfoRebind" type="Label" parent="Controls/LeftMargin/Description/Popup" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 11.0
margin_right = 331.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Dialog", "Pause", "Popup" ]

[node name="Popup2" type="Popup" parent="Controls/LeftMargin/Description/Popup" index="1"]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -327.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
_sections_unfolded = [ "Anchor", "Margin", "Material", "Pause", "Popup" ]

[node name="InfoRebind" type="Label" parent="Controls/LeftMargin/Description/Popup/Popup2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 11.0
margin_right = 331.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Dialog", "Pause", "Popup" ]

[node name="Images" type="VBoxContainer" parent="Controls" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 331.0
margin_right = 331.0
margin_bottom = 322.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "custom_constants" ]

[connection signal="pressed" from="Go back/HBoxContainer/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Go back2/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="Controls/LeftMargin/Description/Up" to="." method="_on_Up_pressed"]

[connection signal="pressed" from="Controls/LeftMargin/Description/Down" to="." method="_on_Down_pressed"]

[connection signal="pressed" from="Controls/LeftMargin/Description/Left" to="." method="_on_Left_pressed"]

[connection signal="pressed" from="Controls/LeftMargin/Description/Right" to="." method="_on_Right_pressed"]

[connection signal="pressed" from="Controls/LeftMargin/Description/Use Select" to="." method="_on_Use_Select_pressed"]

[connection signal="pressed" from="Controls/LeftMargin/Description/Inventory" to="." method="_on_Inventory_pressed"]

[connection signal="pressed" from="Controls/LeftMargin/Description/Pickup" to="." method="_on_Pickup_pressed"]

[connection signal="pressed" from="Controls/LeftMargin/Description/Pause" to="." method="_on_Pause_pressed"]


